position adjust for full-size

--- a/client/src/entities/ui/header/header.styles.module.scss
+++ b/client/src/entities/ui/header/header.styles.module.scss
@@ -1,14 +1,14 @@
 @import '../../../shared/UIKit/fonts/fonts.scss';
+@import '../../../shared/mixins/mixins.module.scss';
 
 .header {
   position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   height: 80px;
-  width: 100%;
+  width: 100vw;
   top: 0;
   z-index: 100;
-
   box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
   border-bottom: 1px solid black;
 }
@@ -26,12 +26,51 @@ header::before {
   left: 0px;
   opacity: 0.25;
 }
+
 .logoImg {
   height: 80px;
 }
-
 .logoField {
   display: flex;
-  margin-left: 10px;
+  align-items: center;
   font-family: $primary_font_variable;
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.characterButtonContainer {
+  @include flex-center;
+}
+
+.navMenuContainer {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.navUl {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.navItem {
+  list-style-type: none;
+}
+.navItem + .navItem {
+  margin-left: 10px;
+}
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 576px) {
+  .header {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+  }
 }
